sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:3: error: not found: value debut
  debut=0;fin=getNombreValeurs()-2
  ^AlgCocktailSort2:3: error: not found: value fin
  debut=0;fin=getNombreValeurs()-2
          ^AlgCocktailSort2:7: error: not found: value debut
    for (i<-debut to fin) {
            ^AlgCocktailSort2:7: error: not found: value fin
    for (i<-debut to fin) {
                     ^AlgCocktailSort2:10: error: not found: value fin
    fin-=1
    ^AlgCocktailSort2:14: error: not found: value debut
    debut+=1
    ^