sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  debut=0;fin=getNombreValeurs()-2
  var b=1
  while (b==1) { 
  	b=0
    for (i<-debut to fin) {
      if (!plusPetit(i,i+1)) {echange(i,i+1);b=1}
    }
    fin-=1
    for (i <- (0 to getNombreValeurs()-2).reverse) {
      if (!plusPetit(i,i+1)) {echange(i,i+1);b=1}
    }
    debut+=1
}
}